// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnTextMessageHandler component (integration with AsyncAPI document) renders default handler when sendOperations is empty array 1`] = `
"@OnTextMessage
  public void processTextMessage(String message, WebSocketClientConnection connection) {
      LOG.info(\\"Received text message: \\" + message);
  }"
`;

exports[`OnTextMessageHandler component (integration with AsyncAPI document) renders default handler when sendOperations is null 1`] = `
"@OnTextMessage
  public void processTextMessage(String message, WebSocketClientConnection connection) {
      LOG.info(\\"Received text message: \\" + message);
  }"
`;

exports[`OnTextMessageHandler component (integration with AsyncAPI document) renders default handler without sendOperations 1`] = `
"@OnTextMessage
  public void processTextMessage(String message, WebSocketClientConnection connection) {
      LOG.info(\\"Received text message: \\" + message);
  }"
`;

exports[`OnTextMessageHandler component (integration with AsyncAPI document) renders handler with if statement for single send operation 1`] = `
"@OnTextMessage
  public void handleTextMessage(String message, WebSocketClientConnection connection) {
      LOG.info(\\"Handler received text message: \\" + message);
      if (message != null && message.contains(\\"sendMessage\\")) {
          sendMessage(message, connection);
      }
      else {
          LOG.warn(\\"Handler received unrecognized message type. Falling back to default handler.\\");
          // Note: By default, we route unrecognized messages to the first operation handler.
          // Depending on your business logic, you may want to change this behavior.
          sendMessage(message, connection);
      }
  }

  public void sendMessage(String message, WebSocketClientConnection connection) {
      LOG.info(\\"Processing sendMessage type message: \\" + message);
      // TODO: implement processing logic for sendMessage
  }"
`;

exports[`OnTextMessageHandler component (integration with AsyncAPI document) renders handler with if-else-if chain for multiple send operations 1`] = `
"@OnTextMessage
  public void handleTextMessage(String message, WebSocketClientConnection connection) {
      LOG.info(\\"Handler received text message: \\" + message);
      if (message != null && message.contains(\\"sendMessage\\")) {
          sendMessage(message, connection);
      }
      else if (message != null && message.contains(\\"sendDataUpdate\\")) {
          sendDataUpdate(message, connection);
      }
      else if (message != null && message.contains(\\"SendNotification\\")) {
          sendNotification(message, connection);
      }
      else if (message != null && message.contains(\\"send_status_update\\")) {
          sendStatusUpdate(message, connection);
      }
      else if (message != null && message.contains(\\"sendWithoutSummary\\")) {
          sendWithoutSummary(message, connection);
      }
      else {
          LOG.warn(\\"Handler received unrecognized message type. Falling back to default handler.\\");
          // Note: By default, we route unrecognized messages to the first operation handler.
          // Depending on your business logic, you may want to change this behavior.
          sendMessage(message, connection);
      }
  }

  public void sendMessage(String message, WebSocketClientConnection connection) {
      LOG.info(\\"Processing sendMessage type message: \\" + message);
      // TODO: implement processing logic for sendMessage
  }

  public void sendDataUpdate(String message, WebSocketClientConnection connection) {
      LOG.info(\\"Processing sendDataUpdate type message: \\" + message);
      // TODO: implement processing logic for sendDataUpdate
  }

  public void sendNotification(String message, WebSocketClientConnection connection) {
      LOG.info(\\"Processing SendNotification type message: \\" + message);
      // TODO: implement processing logic for SendNotification
  }

  public void sendStatusUpdate(String message, WebSocketClientConnection connection) {
      LOG.info(\\"Processing send_status_update type message: \\" + message);
      // TODO: implement processing logic for send_status_update
  }

  public void sendWithoutSummary(String message, WebSocketClientConnection connection) {
      LOG.info(\\"Processing sendWithoutSummary type message: \\" + message);
      // TODO: implement processing logic for sendWithoutSummary
  }"
`;
